--- a/examples/replicated_setups/node2vec/conf_node2vec.ini
+++ b/examples/replicated_setups/node2vec/conf_node2vec.ini
@@ -18,9 +18,9 @@ SEED = 42
 
 [NETWORKS]
 NAMES = Facebook PPI ArXiv
-INPATHS = ../data/Facebook/facebook_combined.txt
-          ../data/PPI/ppi.edgelist
-          ../data/Astro-PH/CA-AstroPh.txt
+INPATHS = ../../../data/Facebook/facebook_combined.txt
+          ../../../data/PPI/ppi.edgelist
+          ../../../data/Astro-PH/CA-AstroPh.txt
 DIRECTED = False
 SEPARATORS = '\s' ',' '\t'
 COMMENTS = '#' '#' '#'
@@ -57,9 +57,9 @@ NAMES_OTHER = node2vec deepWalk line
 EMBTYPE_OTHER = ne ne ne
 WRITE_WEIGHTS_OTHER = False False True
 WRITE_DIR_OTHER = True True True
-METHODS_OTHER = python ../methods/node2vec/main.py --input {} --output {} --dimensions {} --walk-length 80 --num-walks 10 --window-size 10 --workers 8
-                python ../methods/node2vec/main.py --input {} --output {} --dimensions {} --walk-length 80 --num-walks 10 --window-size 10 --workers 8 --p 1 --q 1
-                ../methods/LINE/linux/line -train {} -output {} -size {} -order 2 -samples 100 -negative 5 -rho 0.025 -threads 1
+METHODS_OTHER = python ../../../methods/node2vec/main.py --input {} --output {} --dimensions {} --walk-length 80 --num-walks 10 --window-size 10 --workers 8
+                python ../../../methods/node2vec/main.py --input {} --output {} --dimensions {} --walk-length 80 --num-walks 10 --window-size 10 --workers 8 --p 1 --q 1
+                ../../../methods/LINE/linux/line -train {} -output {} -size {} -order 2 -samples 100 -negative 5 -rho 0.025 -threads 1
 TUNE_PARAMS_OTHER = --p 0.25 0.5 1 2 4 --q 0.25 0.5 1 2 4
 INPUT_DELIM_OTHER = '\s' '\s' '\s'
 OUTPUT_DELIM_OTHER = '\s' '\s' '\s'
