--- a/examples/conf.ini
+++ b/examples/conf.ini
@@ -24,7 +24,7 @@
 TASK = lp
 
 # LP_NUM_EDGE_SPLITS: the number of repetitions of the experiment with different train/test edge splits
-# Required if task is 'lp', 'sp' or 'nr'. For 'nc' evaluation this value must be 1.
+# Required if task is 'lp' or 'sp'. For 'nr' and 'nc' evaluation this value must be 1.
 LP_NUM_EDGE_SPLITS = 2
 
 # NC_NUM_NODE_SPLITS: the number of repetitions for NC experiments with different train/test node splits
